Moved modules into different files to make code easier to demo. Fixed failing tests

--- a/fsharp/poker/Poker.fsproj
+++ b/fsharp/poker/Poker.fsproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Types.fs" />
+    <Compile Include="Parsing.fs" />
+    <Compile Include="Rules.fs" />
     <Compile Include="Poker.fs" />
     <Compile Include="PokerTest.fs" />
   </ItemGroup>
