--- a/fsharp/bank-account/BankAccount.fsproj
+++ b/fsharp/bank-account/BankAccount.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="BankAccount.fs" />
+    <Compile Include="BankAccountProcessor.fs" />
     <Compile Include="BankAccountTest.fs" />
   </ItemGroup>
 
